package com.xinqihd.sns.gameserver.proto;
//ÏìÓ¦ÑûÇë
option java_outer_classname = "XinqiBceExitGame"; 
message BceExitGame {
}
